# bibtexer

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
bibtexer/: __init__.py  __main__.py  cli.py
