[project]
name = "bibtexer"
authors = [
    { name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de" },
]
description = "An opinionated BibTeX file cleaner for computer science."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bibtexparser @ git+https://github.com/sciunto-org/python-bibtexparser@v2.0.0b7",
    "click~=8.1",
    "dblpy-lib~=0.1.3",
    "habanero~=1.2",
    "importlib-metadata~=8.0",
    "tqdm~=4.66",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "approvaltests~=14.0",
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pytest~=8.0",
    "pytest-cov~=6.0",
    "ruff~=0.12.3",
    "types-tqdm~=4.66",
]

[project.urls]
"Homepage" = "https://github.com/janheinrichmerker/bibtexer"
"Bug Tracker" = "https://github.com/janheinrichmerker/bibtexer/issues"

[project.scripts]
bibtexer = "bibtexer.cli:cli"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    "scripts",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "build",
    "venv",
    "scripts",
]

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    "scripts",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
